Applying subdivide GP modifier gets wrong fill #60157

Closed
opened 2019-01-04 14:29:34 +01:00 by heini · 3 comments

System Information
Operating system: win 64
Graphics card: gforce gtx 1060

Blender Version
Broken:
2.80, c97c76c01c, blender2.8, 2019-01-04

Short description of error
when a subdiv modifier is applied to a GP object, the fill color becomes invisible (sometimes only partially)

Exact steps for others to reproduce the error

  • add a stroke with a material that has a fill
  • add a subdivison modifier & apply (fill disappears)
    workaround:
  • enter edit mode and drag a point (fill flickers / only parts of it are shown)
  • undo drag (fill shows again as expected)
**System Information** Operating system: win 64 Graphics card: gforce gtx 1060 **Blender Version** Broken: 2.80, c97c76c01c1d, blender2.8, 2019-01-04 **Short description of error** when a subdiv modifier is applied to a GP object, the fill color becomes invisible (sometimes only partially) **Exact steps for others to reproduce the error** - add a stroke with a material that has a fill - add a subdivison modifier & apply (fill disappears) workaround: - enter edit mode and drag a point (fill flickers / only parts of it are shown) - undo drag (fill shows again as expected)
Author

Added subscriber: @heini

Added subscriber: @heini
Antonio Vazquez self-assigned this 2019-01-04 16:58:45 +01:00
Antonio Vazquez changed title from Applying subdivide modifier to GP object behaves wonky to Applying subdivide GP modifier gets wrong fill 2019-01-04 17:16:32 +01:00

This issue was referenced by 0d736d6896

This issue was referenced by 0d736d689671c4c28a8bda6ca1f8ab61726142b5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60157
No description provided.