Fix T60157: Applying subdivide GP modifier gets wrong fill

The problem was the triangulation cache was not initializated.